# aupt

./: CHANGELOG.md  COMPATIBILITY.md  COMPATIBILITY_SUMMARY.md  DOCS_REORGANIZATION.md  PYTHON_COMPAT_REPORT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  aupt.md  git.sh  main.py  pyproject.toml
aupt/: __init__.py
aupt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
aupt/backends/: __init__.py  apt_backend.py  base_backend.py  dnf_backend.py  pacman_backend.py
aupt/cli/: commands.py  parser.py
aupt/core/: config_manager.py  distro_detector.py  mirror_manager.py  package_resolver.py
aupt/database/: distro_map.json  mirror_list.json  package_alias.json
aupt/utils/: __init__.py  mirror_speed_test.py  subprocess_wrapper.py
markdown/: BUGFIX.md  COMPATIBILITY.md  DOCS_MIGRATION_COMPLETE.md  PYTHON_COMPAT_REPORT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RESTRICTED_ENV.md  SOLUTION_SUMMARY.md  aupt.txt
scripts/: install.sh  install_compat.sh  manual_mirror_switch.sh  test_compatibility.sh  uninstall.sh  verify_docs.sh
tests/: test_cli_parser.py  test_package_resolver.py  test_version_parser.py
